# typer

./: .env.example  .gitignore  CLAUDE.md  MUNDIAL_CLAUDE.md  README.md  docker-compose.yml  fix_sprawozdanie.py  fix_sprawozdanie_v2.py  fix_sprawozdanie_v3.py  generate_report.py  main.py  pyproject.toml  requirements.txt  sprawozdanie.docx  ~$rawozdanie.docx
db/: access_schema.sql  connection.py  diagram.dbml  make_admin.sh  mongo_seed.py  queries.py  reset_db.sh
db/migrations/: 001_init.sql  002_seed.sql  003_add_auth.sql  004_reseed.sql  005_fix_ranking.sql  006_future_matches.sql
domain/: predictions.py
frontend/: index.html
routers/: admin.py  auth.py  matches.py  predictions.py  ranking.py
schemas/: models.py
tests/: test_scoring.py
