[project]
name = "typer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "python-docx>=1.2.0",
]
